padding reduction on bioBox, removed whitespace tags due to spacing issue, added bottom marging to extend space for legibility of contact text with bioBox height changed too.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -241,7 +241,7 @@ h1 {
   height: 500px;
   width: 80%;
   margin: auto;
-  padding: 60px 20px 20px 30px;
+  padding: 40px 10px 10px 15px;
 }
 
 .bioBodyText {
